<?xml version="1.0"?>
<package>
  <name>laser_flipper</name>
  <version>0.1.0</version>
  <description>Reverses a laser scan and publishes it to another node.</description>

  <maintainer email="andywolff@wpi.edu">Andy Wolff</maintainer>
  <license>LGPL 2.1 or BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>cppunit</run_depend>
  <run_depend>sensor_msgs</run_depend>
</package>
